# rl_deploy

./: README.md
src/: README.md
src/deploy/: CMakeLists.txt  package.xml
src/deploy/include/: robot_param.hpp  utils.hpp
src/deploy/include/FSM/: FSM_Manager.hpp  FSM_State.hpp  FSM_State_Collection.hpp
src/deploy/include/PPO/: rl_data_operatation.hpp
src/deploy/include/PPO/Torchscript/: interface_torchscript.cpp  interface_torchscript.hpp
src/deploy/include/PPO/onnx/: interface_onnx.cpp  interface_onnx.hpp
src/deploy/include/Timer/: thread_Timer.hpp
src/deploy/include/data_stream/: data_stream.hpp
src/deploy/include/deploy/: data_update.hpp
src/deploy/include/hardware_interface/: gazebo_interface.hpp  hardware_interface.hpp  mujoco_interface.hpp  usb2can_interface.hpp
src/deploy/include/usr_interface/: Joy_interface.hpp
src/deploy/include/yaml/: yaml_read.cpp  yaml_read.hpp
src/deploy/src/: deploy.cpp  test.cpp
src/policy/go2/: policy.onnx
src/policy/lite3/: policy.onnx  policy.pt
src/robot_description/go2/go2_mjcf/: go2.xml
src/robot_description/go2/go2_urdf/: CMakeLists.txt  package.xml
src/robot_description/go2/go2_urdf/launch/: gazebo.launch  go2_rviz.launch
src/robot_description/go2/go2_urdf/urdf/: go2.urdf
src/robot_description/go2/go2_urdf/xacro/: gazebo.xacro  robot.xacro
src/robot_description/lite3/lite3_mjcf/mjcf/: lite3.xml
src/robot_description/lite3/lite3_urdf/: CMakeLists.txt  package.xml
src/robot_description/lite3/lite3_urdf/config/: robot_control.yaml
src/robot_description/lite3/lite3_urdf/launch/: gazebo.launch  lite3_rviz.launch
src/robot_description/lite3/lite3_urdf/urdf/: lite3.urdf
src/robot_description/lite3/lite3_urdf/xacro/: gazebo.xacro  robot.xacro  transmission.xacro
src/simulation/.marscode/: deviceInfo.json
src/simulation/robot_joint_controller/: CMakeLists.txt  package.xml
src/simulation/robot_msgs/msg/: MotorState.msg
src/simulation/sim/: CMakeLists.txt  package.xml
src/simulation/sim/include/mujoco/: mujoco_utils.hpp
src/simulation/sim/include/sim/: gazebo_sim.hpp  mujoco_sim.hpp
src/simulation/sim/launch/: deploy_gazebo.launch  deploy_mujoco.launch
src/simulation/sim/script/: deploy_mujoco.py
src/simulation/sim/src/: gazebo_sim.cpp  mujoco_sim.cpp
